--- a/geekshop/templates/geekshop/base.html
+++ b/geekshop/templates/geekshop/base.html
@@ -4,12 +4,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}GeekShop{% endblock %}</title>
+	<title>
+        {% block title %}GeekShop{% endblock %}
+    </title>
+
     {% block css %}
 	    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 	    <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
     {% endblock %}
-    {% block js%}{% endblock %}
+    
+    {% block js %}
+    {% endblock %}
 </head>
 
 <body>
@@ -25,7 +30,7 @@
 
 </div>
 
-{% block footer%}
+{% block footer %}
     <div class="footer">
         <div class="clearfix">
             <div class="text-footer">
@@ -56,7 +61,3 @@
 
 </body>
 </html>
-
-<!--
-
--->
