--- a/geekshop/templates/geekshop/index.html
+++ b/geekshop/templates/geekshop/index.html
@@ -36,7 +36,7 @@
 			<div class="block">
 				<a href="#"><img src="{% static 'img/product-1.jpg' %}" alt=""> 
 					<div class="text">
-						<img src="{% static 'img/icon-hover.png' $}" alt="img">
+						<img src="{% static 'img/icon-hover.png' %}" alt="">
 						<h4>Отличный стул</h4>
 						<p>Расположитесь комфортно. </p>
 					</div> 
