--- a/geekshop/templates/geekshop/includes/categories_menu.html
+++ b/geekshop/templates/geekshop/includes/categories_menu.html
@@ -1,13 +1,8 @@
 <div class="links clearfix">
     <ul class="links-menu">
-        <li><a href="#" class="active">все</a></li>
+        <li><a href="{% url 'products' %}" {% if request.resolver_match.kwargs.slug == category.slug %}class="active"{% endif %}>все</a></li>
         {% for category in categories %}
-            <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
+            <li><a href="{{ category.get_absolute_url }}"{% if request.resolver_match.kwargs.slug == category.slug %}class="active"{% endif %}>{{ category.name | upper }}</a></li>
         {% endfor %}
-
-        <li><a href="#">дом</a></li>
-        <li><a href="#">офис</a></li>
-        <li><a href="#">модерн</a></li>
-        <li><a href="#">классика</a></li>
     </ul>
 </div>
