--- a/geekshop/templates/geekshop/includes/top_menu.html
+++ b/geekshop/templates/geekshop/includes/top_menu.html
@@ -1,7 +1,7 @@
 <a href="{% url 'index' %}" class="logo"></a>
 <ul class="menu">
     <li><a href="{% url 'index' %}" {% if request.resolver_match.url_name == 'index' %}class="active"{% endif %}>домой</a></li>
-    <li><a href="{% url 'products' %}" {% if request.resolver_match.url_name == 'products' %}class="active"{% endif %}>продукты</a></li>
+    <li><a href="{% url 'products' %}" {% if request.resolver_match.url_name == 'products' or request.resolver_match.url_name == 'category' %}class="active"{% endif %}>продукты</a></li>
     <li><a href="{% url 'contacts' %}" {% if request.resolver_match.url_name == 'contacts' %}class="active"{% endif %}>контакты</a></li>
 </ul>
 <a href="#" class="search"></a>
