--- a/authapp/templates/authapp/base.html
+++ b/authapp/templates/authapp/base.html
@@ -10,8 +10,8 @@
         {% endblock %}
     </title>
     {% block css %}
-        <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
     {% endblock %}
     {% block js %}
@@ -21,13 +21,10 @@
 <body>
 	<div class="container">
         <div class="login">
-            <div class="h2 text-center head">
-                Вход в систему
-            </div>            
-            
-            {% block content %}
 
+            {% block content %}
             {% endblock %}
+
         </div>
 	</div>
 </body>
