--- a/authapp/templates/authapp/edit.html
+++ b/authapp/templates/authapp/edit.html
@@ -4,7 +4,8 @@
 {% block title %}Редактировать{% endblock %}
 
 {% block content %}
-    <form class="form-horizontal" action="{% url 'edit' %}" method="post" enctype="multipart/form-data">
+    <div class="h2 text-center head">Редактировать профиль</div> 
+    <form class="form-horizontal" action="{% url 'authapp:edit' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ edit_form.as_p }}
         <input class="form-control" type="submit" value="Сохранить">
