--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -10,5 +10,5 @@
         {{ register_form.as_p }}
         <input class="form-control" type="submit" value="Зарегистрироваться">
     </form>
-    <a href="{% url 'login' %}">Уже есть аккаунт? Войти</a> 
+    <a href="{% url 'authapp:login' %}">Уже есть аккаунт? Войти</a> 
 {% endblock %}
