--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -10,5 +10,5 @@
         {{ login_form.as_p }}
         <input class="form-control" type="submit" value="Войти">
     </form>
-    <a href="{% url 'register' %}">Зарегистрироваться</a> 
+    <a href="{% url 'authapp:register' %}">Зарегистрироваться</a> 
 {% endblock %}
