--- a/geekshop/templates/geekshop/includes/categories_menu.html
+++ b/geekshop/templates/geekshop/includes/categories_menu.html
@@ -1,6 +1,6 @@
 <div class="links clearfix">
     <ul class="links-menu">
-        <li><a href="{% url 'products' %}" {% if request.resolver_match.kwargs.slug == category.slug %}class="active"{% endif %}>все</a></li>
+        <li><a href="{% url 'geekshop:products' %}" {% if request.resolver_match.kwargs.slug == category.slug %}class="active"{% endif %}>все</a></li>
         {% for category in categories %}
             <li><a href="{{ category.get_absolute_url }}"{% if request.resolver_match.kwargs.slug == category.slug %}class="active"{% endif %}>{{ category.name | upper }}</a></li>
         {% endfor %}
