--- a/geekshop/templates/geekshop/index.html
+++ b/geekshop/templates/geekshop/index.html
@@ -14,7 +14,7 @@
 			<h3 class="green">тенденции</h3>
 			<h3 class="big"> удобные стулья</h3>
 			<p>Новый уровень комфорта. Отличные характеристики.</p>
-			<a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
+			<a href="{% url 'geekshop:products' %}" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
 		</div>	
 
 		<div class="navi">
