--- a/geekshop/templates/geekshop/product_category.html
+++ b/geekshop/templates/geekshop/product_category.html
@@ -32,7 +32,7 @@
 					<h3 class="big-bold">{{ product.name }}</h3>
 					<h3 class="red">горячее предложение</h3>
 					<p class="price">{{ product.price }}<span>руб</span></p>
-					<a href="#" class="red-button">
+					<a href="{% url 'basket:add' product.pk %}" class="red-button">
 						заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
 					</a>
 					<div class="description-text"><p>Описание еще не подвезли</p></div>
