--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -3,6 +3,10 @@
 
 {% block title %}Корзина{% endblock %}
 
+{% block js %}
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+{% endblock %}
+
 {% block header %}
 	<div class="hero">
 		<div class="header clearfix">
@@ -37,7 +41,7 @@
 									<td>{{ item.count }}</td>
 									<td>
 										<a href="{% url 'basket:add' item.product.pk %}">
-											<button type="button" class="btn btn-danger">Добавить</button>
+											<button type="button" class="btn btn-success">Добавить</button>
 										</a>
 										<a href="{% url 'basket:remove' item.product.pk %}">
 											<button type="button" class="btn btn-danger">Удалить</button>
