--- a/templates/basket/basket.html
+++ b/templates/basket/basket.html
@@ -1,4 +1,4 @@
-{% extends 'geekshop/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}Корзина{% endblock %}
@@ -11,7 +11,7 @@
 	<div class="hero">
 		<div class="header clearfix">
 			
-			{% include 'geekshop/includes/top_menu.html'%}
+			{% include 'includes/top_menu.html'%}
 			
 		</div>
 		<h1>Корзина</h1>
