--- a/templates/geekshop/contact.html
+++ b/templates/geekshop/contact.html
@@ -1,4 +1,4 @@
-{% extends 'geekshop/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}Контакты{% endblock %}
@@ -7,7 +7,7 @@
 	<div class="hero">
 		<div class="header clearfix">
 			
-			{% include 'geekshop/includes/top_menu.html'%}
+			{% include 'includes/top_menu.html'%}
 			
 		</div>
 		<h1>наши контакты</h1>
