--- a/templates/authapp/base.html
+++ b/templates/authapp/base.html
@@ -13,9 +13,7 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
-    {% endblock %}
-    {% block js %}
-
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     {% endblock %}
 </head>
 <body>
@@ -23,6 +21,10 @@
         <div class="login">
 
             {% block content %}
+            {% endblock %}
+
+            {% block js %}
+                <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
             {% endblock %}
 
         </div>
