--- a/templates/authapp/login.html
+++ b/templates/authapp/login.html
@@ -8,6 +8,9 @@
     <form class="form-horizontal" action="{% url 'authapp:login' %}" method="post">
         {% csrf_token %}
         {{ login_form.as_p }}
+        {% if next%}
+            <input type="hidden" name="next" value="{{ next }}">
+        {% endif %}
         <input class="form-control" type="submit" value="Войти">
     </form>
     <a href="{% url 'authapp:register' %}">Зарегистрироваться</a> 
