--- a/geekshop/templates/geekshop/product_category.html
+++ b/geekshop/templates/geekshop/product_category.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'index/base.html' %}
 {% load static %}
 
 {% block title %}Каталог{% endblock %}
@@ -6,7 +6,7 @@
 {% block header %}
 	<div class="hero-white">
 		<div class="header clearfix">
-			{% include 'includes/top_menu.html'%}
+			{% include 'index/includes/top_menu.html'%}
 		</div>
 	</div>
 {% endblock %}
@@ -14,7 +14,7 @@
 {% block content %}
 	<div class="details">
 
-		{% include 'includes/categories_menu.html' %}
+		{% include 'geekshop/includes/categories_menu.html' %}
 
 		<h3>{{ current_category.description }}</h3>
 
