--- a/geekshop/templates/geekshop/products.html
+++ b/geekshop/templates/geekshop/products.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'index/base.html' %}
 {% load static %}
 
 {% block title %}Каталог{% endblock %}
@@ -7,7 +7,7 @@
 	<div class="hero-white">
 		<div class="header clearfix">
 
-			{% include 'includes/top_menu.html'%}
+			{% include 'index/includes/top_menu.html'%}
 
 		</div>
 	</div>
@@ -16,7 +16,7 @@
 {% block content %}
 	<div class="details">
 
-		{% include 'includes/categories_menu.html' %}
+		{% include 'geekshop/includes/categories_menu.html' %}
 
 		<div class="details-products">
 			<div class="details-slider">
