--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'index/base.html' %}
 {% load static %}
 
 {% block title %}Магазин{% endblock %}
@@ -6,7 +6,7 @@
 	<div class="slider">
 		<div class="header clearfix">
 
-			{% include 'includes/top_menu.html'%}
+			{% include 'index/includes/top_menu.html'%}
 
 		</div>
 
