--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'index/base.html' %}
 {% load static %}
 
 {% block title %}Новости{% endblock %}
@@ -6,7 +6,7 @@
 {% block header %}
 	<div class="hero">
 		<div class="header clearfix">
-			{% include 'includes/top_menu.html'%}
+			{% include 'index/includes/top_menu.html'%}
 		</div>
 		<h1>новости</h1>
 	</div>
