--- a/adminapp/templates/adminapp/base.html
+++ b/adminapp/templates/adminapp/base.html
@@ -18,7 +18,7 @@
     {% endblock %}
 </head>
 <body>
-  <div class="admin_container">        
+  <div class="container">        
     <div class="h2 text-center head">
       <a href="{% url 'adminapp:admin' %}"><h2>Админка</h2></a>
     </div>
