--- a/adminapp/templates/adminapp/users.html
+++ b/adminapp/templates/adminapp/users.html
@@ -12,7 +12,7 @@
       <div 
        class="user_record {% if not object.is_active %}not_active{% endif %}">
         <img 
-          src="/media/{{ object.avatar|default:'users_avatars/default.jpg' }}"
+          src="/media/{{ object.avatar|default:'user_avatars/default.jpg' }}"
           alt="{{ object.username }}">
         <div class="user_role">
           {% if object.is_superuser %}
