--- a/geekshop/templates/geekshop/products.html
+++ b/geekshop/templates/geekshop/products.html
@@ -6,44 +6,68 @@
 {% block header %}
 	<div class="hero-white">
 		<div class="header clearfix">
-
 			{% include 'index/includes/top_menu.html'%}
-
 		</div>
 	</div>
 {% endblock %}
 
 {% block content %}
 	<div class="details">
-
 		{% include 'geekshop/includes/categories_menu.html' %}
 
-		<div class="details-products">
-			<div class="details-slider">
-				<div class="slider-product">
-					<a href="{{ promotion_product.get_absolute_url }}">
-						<img src="{{ promotion_product.image.url }}" style="height: 570px; width: 570px;">
-					</a>
+		{% if promotion_product %}
+			<div class="details-products">
+				<div class="details-slider">
+					<div class="slider-product">
+						<a href="{{ promotion_product.get_absolute_url }}">
+							<img src="{{ promotion_product.image.url }}" style="height: 570px; width: 570px;">
+						</a>
+					</div>
 				</div>
-			</div>
 
-			<div class="description">
-				<h3 class="big-bold">{{ promotion_product.name | title }}</h3>
-				<h3 class="red">горячее предложение</h3>
-				<p class="price">{{ promotion_product.price | floatformat:1 }}<span>руб</span></p>
-				<a href="{% url 'basket:add' promotion_product.pk %}" class="red-button">
-					заказать<i class="fa fa-chevron-right" aria-hidden="true"></i>
-				</a>
-				<div class="description-text">
-					<p>Расположитесь комфортно.</p> 
-					<p>Отличное качество материалов
-					позволит вам это.</p> 
-					<p>Различные цвета</p>
-					<p>высочайший уровень
-					эргономики и прочность.</p>
+				<div class="description">
+					<h3 class="big-bold">{{ promotion_product.name|title }}</h3>
+					<h3 class="red">горячее предложение</h3>
+					<p class="price">{{ promotion_product.price|floatformat:1 }}<span>руб</span></p>
+					<a href="{% url 'basket:add' promotion_product.pk %}" class="red-button">
+						заказать<i class="fa fa-chevron-right" aria-hidden="true"></i>
+					</a>
+					<div class="description-text">
+						<p>Расположитесь комфортно.</p> 
+						<p>Отличное качество материалов
+						позволит вам это.</p> 
+						<p>Различные цвета</p>
+						<p>высочайший уровень
+						эргономики и прочность.</p>
+					</div>
 				</div>
 			</div>
-		</div>
+		{% elif current_category and products %}
+			<h3>{{ current_category.description }}</h3>
+			{% for product in products %}
+				<div class="details-products">
+					<div class="details-slider">
+						<div class="slider-product">
+							<a href="{{ product.get_absolute_url }}">
+								<img src="{{ product.image.url }}" style="height: 570px; width: 570px;">
+							</a>
+						</div>
+					</div>
+
+					<div class="description">
+						<h3 class="big-bold">{{ product.name }}</h3>
+						<h3 class="red">горячее предложение</h3>
+						<p class="price">{{ product.price }}<span>руб</span></p>
+						<a href="{% url 'basket:add' product.pk %}" class="red-button">
+							заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
+						</a>
+						<div class="description-text"><p>Описание еще не подвезли</p></div>
+					</div>
+				</div>
+			{% endfor %}
+		{% elif current_category%}
+			<h2>Категория {{ current_category.name }} пуста...</h2>
+		{% endif %}
 
 		<div class="related">
 			<div class="title clearfix">
