--- a/geekshop/templates/geekshop/includes/pagination.html
+++ b/geekshop/templates/geekshop/includes/pagination.html
@@ -1,11 +1,9 @@
 <div class="pagination">
-    {% if products.has_previous %}
-        <a href="{% url 'mainapp:category_page' category.pk products.previous_page_number %}"><<</a>
-
+    {% if page_obj.has_previous %}
+        <a href="{% url 'geekshop:category' current_category.slug %}?page={{page_obj.previous_page_number}}"><<</a>
     {% endif %}
-        {{ products.number }}/{{ products.paginator.num_pages }}
-    {% if products.has_next %}
-        <a href="{% url 'mainapp:category_page' category.pk products.next_page_number %}">>></a>
+    {{page_obj.number}}
+    {% if page_obj.has_next %}
+        <a href="{% url 'geekshop:category' current_category.slug %}?page={{page_obj.next_page_number}}">>></a>
     {% endif %}
-
 </div>
